# adventofcode

./: .gitattributes  .gitignore  Cargo.toml  README.md  get_puzzle_inputs.py  go.mod  go.sum  renameInputFiles.py  rename_solutions.py  tsconfig.json
2015/01/: advent201501.go
2015/02/: advent201502.go
2015/04/: advent201504.go
2015/05/: advent201505.js
2015/07/: advent201507.go
2015/08/: advent201508.go
2015/09/: advent201509.go
2015/1/: README.md  solution.go
2015/10/: README.md  advent201510.go  comparison.go  solution.go
2015/11/: README.md  advent201511.go  solution.go
2015/12/: README.md  advent201512.go  solution.go
2015/13/: README.md  advent201513.go  solution.go
2015/14/: README.md  advent201514.go  solution.go
2015/15/: README.md  advent201515.go  solution.go
2015/16/: README.md  advent201516.go  solution.go
2015/17/: README.md  advent201517.go  solution.go
2015/18/: README.md  advent201518.go  solution.go
2015/19/: README.md  advent201519.go  solution.go  solution.md  solution.txt
2015/2/: README.md  solution.go
2015/20/: README.md  advent201520.go  solution.go
2015/21/: README.md  solution.go  solution.ts
2015/22/: README.md  solution.go  solution.ts
2015/23/: README.md  advent201523.go  solution.go
2015/24/: README.md  advent201524.go  solution.go
2015/25/: README.md  (+1 more)
2019/: intcode.ts
templates/: solution.go  solution.js  solution.py  solution.ts
tests/: runSolutions.go  run_solutions.py
utils/: Math.go  MaxHeap.js  MaxHeap.ts  MinHeap.go  MinHeap.js  MinHeap.ts  PriorityQueue.go  UnionFind.go
(+869 files in other folders)
