[package]
name = "adventofcode"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
  "2022/1/solution_2022_1",
  "2024/1/solution_2024_1",
  "2024/2/solution_2024_2",
  "2025/1/solution_2025_1",
  "2025/11/solution_2025_11",
  "2025/2/solution_2025_2",
  "2025/3/solution_2025_3",
  "2025/4/solution_2025_4",
  "2025/5/solution_2025_5",
  "2025/8/solution_2025_8",
]
